--- a/ClotheShop/ClotheShop.csproj
+++ b/ClotheShop/ClotheShop.csproj
@@ -53,6 +53,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Garment.cs" />
+    <Compile Include="Pant.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Seller.cs" />
