--- a/ClotheShop/ClotheShop.csproj
+++ b/ClotheShop/ClotheShop.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Seller.cs" />
     <Compile Include="Shirt.cs" />
+    <Compile Include="Shop.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
