--- a/ClotheShop/ClotheShop.csproj
+++ b/ClotheShop/ClotheShop.csproj
@@ -60,6 +60,9 @@
     <Compile Include="Seller.cs" />
     <Compile Include="Shirt.cs" />
     <Compile Include="Shop.cs" />
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
