--- a/ClotheShop/ClotheShop.csproj
+++ b/ClotheShop/ClotheShop.csproj
@@ -46,7 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cotization.cs" />
+    <Compile Include="Quotation.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -57,6 +57,7 @@
     <Compile Include="Pant.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Record.cs" />
     <Compile Include="Seller.cs" />
     <Compile Include="Shirt.cs" />
     <Compile Include="Shop.cs" />
